--- a/P3/P3.ipynb
+++ b/P3/P3.ipynb
@@ -13,14 +13,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "id": "improving-gathering",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pytket as ptk\n",
     "import numpy as np\n",
-    "from pytket.backends.ibm import AerBackend"
+    "from pytket.backends.ibm import AerBackend\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "compact-housing",
+   "metadata": {},
+   "source": [
+    "**El primer parámetro de la función indica los n primeros qubits a los que se quiere aplicar la (A)QFT**\n",
+    "\n",
+    "**El parámetro 'l' es el número de rotaciones máximas que se quieren aplicar a un qubit para las AQFT. Si se deja por defecto, 'l' se calcula como el logaritmo en base 2 del número de qubits, aproximando hacia arriba**"
    ]
   },
   {
@@ -34,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "id": "static-berkeley",
    "metadata": {},
    "outputs": [],
@@ -53,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "id": "married-identity",
    "metadata": {},
    "outputs": [],
@@ -80,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "id": "greatest-amber",
    "metadata": {},
    "outputs": [],
@@ -104,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "id": "alpha-affect",
    "metadata": {},
    "outputs": [
@@ -139,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "id": "moved-exemption",
    "metadata": {},
    "outputs": [
@@ -148,20 +159,20 @@
      "output_type": "stream",
      "text": [
       "Resultados de la QFT : \n",
-      "Counter({(0, 1, 0, 1): 79, (1, 0, 0, 1): 76, (0, 0, 1, 1): 68, (0, 1, 1, 0): 67, (0, 1, 1, 1): 66, (0, 0, 0, 0): 65, (0, 1, 0, 0): 65, (0, 0, 0, 1): 62, (1, 0, 1, 1): 60, (1, 0, 0, 0): 59, (1, 1, 1, 0): 59, (1, 1, 0, 1): 58, (1, 0, 1, 0): 56, (1, 1, 1, 1): 56, (1, 1, 0, 0): 55, (0, 0, 1, 0): 49})\n",
+      "Counter({(0, 0, 0, 0): 74, (0, 1, 0, 1): 71, (0, 1, 1, 0): 71, (0, 1, 0, 0): 66, (1, 0, 1, 0): 66, (1, 1, 0, 0): 65, (1, 1, 0, 1): 65, (0, 1, 1, 1): 64, (0, 0, 0, 1): 61, (1, 1, 1, 1): 61, (0, 0, 1, 1): 59, (1, 0, 1, 1): 59, (1, 0, 0, 1): 58, (0, 0, 1, 0): 55, (1, 1, 1, 0): 55, (1, 0, 0, 0): 50})\n",
       "------------------------------------\n",
       "Resultados de la AQFT: \n",
-      "Counter({(0, 1, 1, 1): 77, (1, 1, 0, 0): 71, (0, 0, 0, 0): 70, (1, 1, 0, 1): 69, (0, 0, 1, 0): 66, (0, 1, 0, 1): 66, (1, 0, 1, 1): 65, (0, 1, 1, 0): 64, (1, 1, 1, 1): 62, (0, 0, 0, 1): 61, (1, 0, 0, 0): 60, (1, 0, 1, 0): 59, (1, 0, 0, 1): 55, (1, 1, 1, 0): 55, (0, 0, 1, 1): 52, (0, 1, 0, 0): 48})\n",
+      "Counter({(1, 1, 1, 0): 74, (0, 0, 1, 0): 72, (0, 0, 0, 1): 71, (1, 0, 0, 0): 68, (0, 1, 1, 0): 65, (1, 1, 1, 1): 65, (0, 1, 0, 1): 64, (0, 1, 1, 1): 63, (1, 0, 1, 0): 63, (1, 1, 0, 1): 62, (1, 0, 0, 1): 61, (0, 0, 1, 1): 60, (1, 1, 0, 0): 59, (0, 1, 0, 0): 58, (1, 0, 1, 1): 51, (0, 0, 0, 0): 44})\n",
       "------------------------------------\n",
       "Resultados QFT\n",
       "Se han obtenido 1000 resultados\n",
       "En todos esos resultados, cada qubit se midio a 1 el siguiente numero de veces\n",
-      "[479, 505, 481, 525]\n",
+      "[479, 518, 490, 498]\n",
       "------------------------------------\n",
       "Resultados AFT\n",
       "Se han obtenido 1000 resultados\n",
       "En todos esos resultados, cada qubit se midio a 1 el siguiente numero de veces\n",
-      "[479, 505, 481, 525]\n"
+      "[479, 518, 490, 498]\n"
      ]
     }
    ],
@@ -198,6 +209,9 @@
     "    for j in range(4):\n",
     "        if i[j] == 1 :\n",
     "            b1_02[j] = b1_02[j] + counts[i]\n",
+    "            \n",
+    "            \n",
+    "\n",
     "\n",
     "print(\"------------------------------------\")\n",
     "print(\"Resultados QFT\")\n",
@@ -229,6 +243,94 @@
     "Observando los resultados obtenidos al realizar simulaciones, se comprueba que esto es cierto, pues las probabilidades de medir un 1 son aproximadamente la mitad tanto para AQFT como para QFT\n",
     "\n",
     "Por otro lado, a pesar de que la AQFT es una aproximación de la QFT, en este caso los resultados obtenidos para las dos operaciones no muestran diferencias debido a que, con respecto a la QFT, la AQFT solo realiza una rotación menos que la QFT y esa rotación extra que realiza la QFT es de un ángulo muy pequeño (pi/8)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "first-swiss",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 2 : Programar Sumador de Draper con QFT y AQFT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "developing-pizza",
+   "metadata": {},
+   "source": [
+    "**El primer parámetro de la función indica los n primeros qubits a los que se quiere aplicar la (A)QFT**\n",
+    "\n",
+    "**El parámetro 'l' es el número de rotaciones máximas que se quieren aplicar a un qubit para las AQFT. Si se deja por defecto, 'l' se calcula como el logaritmo en base 2 del número de qubits, aproximando hacia arriba**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "peaceful-chrome",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def aplica_QFTinversa(n, circuit):\n",
+    "    for i in range(n-1, -1, -1):\n",
+    "        circuit.H(i)\n",
+    "        v = 0.5\n",
+    "        print(i)\n",
+    "        for j in range(i-1, -1, -1):\n",
+    "            print(\"    controla rot en {} de {}\".format(j,1-v))\n",
+    "            circuit.CRz(1-v,j,i)\n",
+    "            v = v/2\n",
+    "        circuit.add_barrier([i for i in range(n)])\n",
+    "    \n",
+    "    return circuit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "protecting-manitoba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def aplica_AQFTinversa(n,circuit, l = 0):\n",
+    "    if l == 0 :\n",
+    "        l = int(np.ceil(np.log2(n)))\n",
+    "    \n",
+    "    print(l)\n",
+    "    for i in range(n-1, -1, -1):\n",
+    "        circuit.H(i)\n",
+    "        v = 0.5\n",
+    "        j = i-1\n",
+    "        while j < n and j < i-l-1: \n",
+    "            circuit.CRz(1-v,j,i)\n",
+    "            v = v/2\n",
+    "            j = j+1\n",
+    "        circuit.add_barrier([i for i in range(n)])\n",
+    "    return circuit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "gross-improvement",
+   "metadata": {},
+   "source": [
+    "**El primer parámetro indica el número de bits de los operandos del sumador**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "modern-treasurer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def aplica_DrapperAdder(n,circuit):\n",
+    "    for i in range(n):\n",
+    "        v = 1\n",
+    "        for j in range(n+1 , 2*n):\n",
+    "            circuit.CRz(j,i,v)\n",
+    "            v = v/2\n",
+    "        circuit.add_barrier([i for i in range(n)])\n",
+    "    return circuit"
    ]
   }
  ],
